# corryvreckan

./: .codespellrc  .gitignore  .gitlab-ci.yml  .markdownlintrc  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  mimosa.conf  mimosa_v1.conf  script.sh  testbeam_script.sh
.ci/: init_x86_64.sh
.reuse/: dep5
alignment/: mimosa.conf  mimosa_alignment.conf  mimosa_prealignment.conf  mimosa_v1.conf  nohup.out  run_alignment.sh
cmake/: CPackConfig.cmake  FindEUDAQ1.cmake  FindMUPIX8DAQ.cmake  LATEX.cmake  PANDOC.cmake  clang-cpp-checks.cmake  cmake-checks.cmake  compiler-flag-checks.cmake  compiler-version-checks.cmake  corryvreckan.cmake  setup.cmake.sh  tools.cmake
doc/reference/: Doxyfile  style.css
etc/: README.md  addModule.sh  setup_lxplus.sh
etc/docker/: Dockerfile  Dockerfile.deps
etc/git-hooks/: install-hooks.sh  pre-commit-clang-format-hook  pre-commit-hook  pre-push-hook  pre-push-tag-version-hook
etc/scripts/: update_copyright_years_corry.sh
geometries/: mimosa.geo  mimosa_aligned_2025_05_CERN_ETL.geo
jobsub/: README.md  jobsub.py  loader.py  misc.py  runner.py
plot_scripts/: make_plots.sh  make_plots_batch.py  nohup.out  plot_intersect.py  plot_residual.py  plot_tracks.py
src/core/: CMakeLists.txt  Corryvreckan.cpp  Corryvreckan.hpp
src/exec/: CMakeLists.txt  corry.cpp
src/modules/EventLoaderHDF5/: CMakeLists.txt  EventLoaderHDF5.cpp  EventLoaderHDF5.h  README.md
testing/: run_test.sh  test_align_dut_timepix3tel_dut_atlaspix_ebeam120.conf  test_io_mimosa26tel_desy_5400MeV_plane2.conf
(+310 files in other folders)
